janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__thread_first_nested_calls.snap
---
source: src/editing/threading/tests.rs
expression: "|(f (g (h x) a) b)"
---
----- BEFORE ACTION
(f (g (h x) a) b)
↑

----- AFTER ACTION: Thread first (->)
(-> x h (g a) (f b))
