janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__thread_last_a_multiline_call.snap
---
source: src/editing/threading/tests.rs
expression: "  (reduce + 0\n|    (map inc xs))"
---
----- BEFORE ACTION
  (reduce + 0
    (map inc xs))
↑

----- AFTER ACTION: Thread last (->>)
  (->> xs
       (map inc)
       (reduce + 0))
