janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__thread_last_nested_calls.snap
---
source: src/editing/threading/tests.rs
expression: (reduce| + 0 (map inc (filter odd? xs)))
---
----- BEFORE ACTION
(reduce + 0 (map inc (filter odd? xs)))
       ↑

----- AFTER ACTION: Thread last (->>)
(->> xs (filter odd?) (map inc) (reduce + 0))
