janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__unthread_first.snap
---
source: src/editing/threading/tests.rs
expression: (-> x| inc (f a))
---
----- BEFORE ACTION
(-> x inc (f a))
     ↑

----- AFTER ACTION: Unthread
(f (inc x) a)
