janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__unthread_from_inside_a_step.snap
---
source: src/editing/threading/tests.rs
expression: (-> x (f |a))
---
----- BEFORE ACTION
(-> x (f a))
         ↑

----- AFTER ACTION: Unthread
(f x a)
