janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__unthread_last.snap
---
source: src/editing/threading/tests.rs
expression: "|(->> items (map f) (reduce + 0))"
---
----- BEFORE ACTION
(->> items (map f) (reduce + 0))
↑

----- AFTER ACTION: Unthread
(reduce + 0 (map f items))
