janet-lsp-plus/src/editing/threading/snapshots/janet_lsp_plus__editing__threading__tests__unthread_the_inner_of_nested_macros.snap
---
source: src/editing/threading/tests.rs
expression: (-> x (->> |ys (map f)) g)
---
----- BEFORE ACTION
(-> x (->> ys (map f)) g)
           ↑

----- AFTER ACTION: Unthread
(-> x (map f ys) g)
